--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ AutoROM.accept-rom-license==0.6.1
 gym==0.26.2
 gymnasium==0.29.1
 pygame==2.5.2
+rich
+Shimmy==0.2.1
 stable-baselines3==2.2.1
 torch==2.1.2
 torchvision==0.16.2
+tqdm
